...
        android:icon="@drawable/ic_menu_share"
        android:title="Hidden Events" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_menu_gallery"
        android:title="Categories" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_menu_send"
        android:title="Map" />

...
        android:id="@+id/nav_create_event"
        android:icon="@drawable/ic_menu_share"
        android:title="Create Event" />

    <item
        android:id="@+id/nav_sign_out"
        android:title="Sign Out" />

</menu>

