<resources>
    <string name="app_name">UCSDConnect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
    <string name="title_activity_input_maps">Map</string>
    <string name="okayString">Okay</string>
    <string name="cancelString">Cancel</string>
    <!-- from https://www.mkyong.com/android/android-spinner-drop-down-list-example/ -->
    <string-array name="categories">
        <item>--Select Category--</item>
        <item>Academic</item>
        <item>Club</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>
</resources>

